# Aruco-WiFi-Localization

./: CMakeLists.txt  README.md  data.txt  data_test.txt  package.xml
include/: ros_aruco.h
msg/: wlan.msg
scripts/: WIFI-POSI-2019-11-08-10:21:07.txt  backup.py  wifiData.py  wlanlist.py
src/: main.cpp  ros_aruco.cpp
